[bugfix] project sidebar button size bugfix on iPhone
- button default padding makes sidebar button strech in x-driection only in iPhone (why??)
- solved by just removing padding

--- a/app/project/Project.module.scss
+++ b/app/project/Project.module.scss
@@ -32,6 +32,8 @@
     width: 1rem;
     height: 1rem;
     border-radius: 50%;
+    padding: 0;
+    margin: 0;
     cursor: pointer;
 
     &.selected {
